fix overlapping mobile

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,22 +1,24 @@
 .wrapper {
-    max-width: 70rem;
-    margin: 2rem auto;
-    padding: 0 1rem;
+  max-width: 70rem;
+  margin: 2rem auto;
+  padding: 0 1rem;
 
-    display: grid;
-    grid-template-columns: 256px 1fr;
-    grid-gap: 2rem;
-    align-items: flex-start;
-
+  display: grid;
+  grid-template-columns: 256px 1fr;
+  grid-gap: 2rem;
+  align-items: flex-start;
 }
 
 /* Mobile */
-@media (max-width: 768px) {
-    html {
-        font-size: 0.875rem;
-    }
- 
-    .wrapper {
-        grid-template-columns: 1fr;
-    }
+@media (max-width: 767px) {
+  html {
+    font-size: 0.875rem;
+  }
+
+  .wrapper {
+    grid-template-columns: 1fr;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
 }
