--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -1,63 +1,68 @@
 .sidebar {
-    background-color: var(--gray-800);
-    border-radius: 8px;
-    overflow: hidden;
+  background-color: var(--gray-800);
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .cover {
-    width: 100%;
-    height: 20px;
-    object-fit: cover;
+  width: 100%;
+  height: 50px;
+  object-fit: cover;
 }
 
 .profile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: calc(0px - 1.5rem - 6px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: calc(0px - 1.5rem - 6px);
 }
 
 .profile strong {
-    margin-top: 1rem;
-    color: var(--gray-100);
-    line-height: 1.6;
+  margin-top: 1rem;
+  color: var(--gray-100);
+  line-height: 1.6;
 }
 
 .profile span {
-    color: var(--gray-400);
-    font-size: 0.875rem;
-    line-height: 1.6;
+  color: var(--gray-400);
+  font-size: 0.875rem;
+  line-height: 1.6;
 }
 
-
 .sidebar footer {
-    border-top: 1px solid var(--gray-600);
-    margin-top: 1.5rem;
-    padding: 1.5rem 2rem 2rem;
+  border-top: 1px solid var(--gray-600);
+  margin-top: 1.5rem;
+  padding: 1.5rem 2rem 2rem;
 }
 
 .sidebar footer a {
-    
-    background: transparent;
-    color: var(--green-500);
-    border: 1px solid var(--green-500);
-    border-radius: 8px;
-    height: 50px;
-    padding: 0 1.5rem;
-    font-weight: bold;
-    display: block;
-    text-decoration: none;
+  background: transparent;
+  color: var(--green-500);
+  border: 1px solid var(--green-500);
+  border-radius: 8px;
+  height: 50px;
+  padding: 0 1.5rem;
+  font-weight: bold;
+  display: block;
+  text-decoration: none;
 
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 
-    gap: 0.75rem;
-    
-    transition: color 0.2s, background-color 0.2s;
+  gap: 0.75rem;
+
+  transition: color 0.2s, background-color 0.2s;
 }
 
 .sidebar footer a:hover {
-    background: var(--green-500);
-    color: var(--gray-100);
+  background: var(--green-500);
+  color: var(--gray-100);
+}
+
+@media (max-width: 767px) {
+  .sidebar {
+    width: 90%;
+    margin: 2rem auto 0 auto;
+  }
 }
